# zos-ml-demo

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TECHNICAL_DETAILS.md  TROUBLESHOOTING.md  app.py  mkdocs.yml  ml_model.py  pyproject.toml  requirements.in  requirements.txt  setup.py  test_model.py
.github/: project.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  deploy.yml  docs.yml  security.yml
config/: zos_config.py
docs/: index.md  installation.md  zos_deployment_guide.md
jcl/: MLAPP.JCL  MLAPPEXT.JCL  MLAPPMON.JCL
static/js/: app.js
templates/: index.html
tests/: test_performance.py  test_transaction.py
utils/: zos_advanced_subsystems.py  zos_extended_monitoring.py  zos_performance_analyzer.py  zos_resource_manager.py  zos_security_manager.py  zos_subsystem_integration.py
zos_ml_demo/: __init__.py  ml_model.py
zos_ml_demo/utils/: __init__.py  zos_integration.py  zos_monitoring.py  zos_performance_analyzer.py
