[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zos-ml-demo"
version = "1.0.0"
description = "z/OS Machine Learning Transaction Analyzer"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "VadneyK", email = "vadney.k@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "flask>=3.0.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=./"
testpaths = [
    "tests",
]

[tool.black]
line-length = 127
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
targets = ["zos_ml_demo"]
